static/css/style.css
/* font-rulings */

.eagle-lake {
    font-family: 'Eagle Lake', serif;
}

.hina-mincho {
    font-family: 'Hina Mincho', serif;
}

.merriweather {
    font-family: 'Merriweather', serif;
}



/* general style rules */

body, p {
    font-family: 'Merriweather', serif;
}

main {
    margin-left: 5%;
    margin-right: 5%;
}

.text-shadow {
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
}

.dropdown-content li>a>i {
    margin: 0;
}

.card-action a {
    font-family: 'Merriweather', serif;
}

.black-text {
    color: black;
}

.dark-green {
    background-color: #2A652D;
}


/* navbar */

nav .brand-logo.center {
    left: 33% !important;
}

.nav-links {
    margin-left: 42%;
}

.nav-links a {
    font-size: 15px !important;
}

@media(max-width: 353px) {
    .brand-logo {
        font-size: 24px !important;
    }
}

.nav-icon {
    font-size: 38px !important;
}

nav i,
nav [class^="mdi-"],
nav [class*="mdi-"],
nav i.material-icons {
    display: inline-block;
    margin-left: 0;
}

.sidenav li>a>i,
.sidenav li>a>[class^="mdi-"],
.sidenav li>a li>a>[class*="mdi-"],
.sidenav li>a>i.material-icons {
    float: none;
    margin: 0;
}

.dropdown-content li>a,
.dropdown-content li>span {
    font-size: 16px !important;
    color: #26a69a !important;
    display: block !important;
    line-height: 22px !important;
    padding: 14px 16px !important;
}

@media(min-width: 600px) {

    nav,
    nav .nav-wrapper i,
    nav a.sidenav-trigger,
    nav a.sidenav-trigger i {
        height: 40px;
        line-height: 40px;
    }
}

.sidenav {
    width: 50%;
}



/* search bar */

.search-div {
    margin-bottom: 0;
}

#search {
    margin: 0 !important;
}

.search-button {
    height: 43px;
    position: absolute;
    width: 3rem;
    font-size: 2.2rem;
    -webkit-transition: color .2s;
    transition: color .2s;
    background-color: orange;
}

@media(min-width: 1200px) {
    .search-button {
        height: 46px;
    }
}

.search-container {
    margin-top: 0;
}

@media(max-width: 600px) {

    .search-container {
        width: 83%;
    }
}

.search-container label {
    color: black!important;
    opacity: 0.8!important;
}



/* main headings */

.main-heading {
    font-family: 'Hina Mincho', serif;
    margin-top: 40px;
}

@media(max-width: 576px) {
    .main-heading {
        margin-top: 50px;
    }
}



/* footer */


.footer-tag {
    font-size: 15px;
}

.footer-links {
    font-size: 18px;
}

.footer-links a {
    color: #ffc968;
}

.footer-links a:hover {
    text-decoration: underline;
}

@media(min-width: 993px) {
    .footer-links {
        text-align: right;
    }
}


/* hero image */

.hero-image img {
    width: 100%;
    height: 70vh;
    display: none;
}

@media(max-width: 992px) {
    .hero-image img {
        display: none;
    }
}



/* home page */

.home-description {
    border: dashed 2px #2a652d;
    margin-bottom: 35px;
}

.home-description p {
    color: #2a652d;
    font-weight: 600;
    padding: 20px;
}

.card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating),
.home-description a {
    color: black;
    text-decoration: underline;
}

#homePageHeading {
    margin-top: 75px;
}


/* genreal card styling */

.card .card-title {
    font-family: 'Eagle Lake', serif;
    letter-spacing: 2px;
}

.card-content p {
    font-size: 18px;
    font-family: 'Hina Mincho', serif;
}

.select-wrapper input.select-dropdown {
    opacity: 0.6;
}

.card .card-action {
    border-top: 2px solid white;
    color: #FFC968;
}

#notUserInstructions {
    font-family: 'Merriweather', serif;
}

#notUserInstructions a {
    color: #9ED7FF;
}

.card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating) {
    margin-right: 1px;
    text-transform: none;
}




/* word summaries */

.link-to-word a {
    color: #FFC968!important;
}

.link-to-word a:hover {
    color: #9ED7FF!important;
}




/* word card */
.word-card {
    margin-top: 8%;
}

.word-name {
    text-decoration: underline;
}

.alternative-spellings-container {
    opacity: .7;
}

.no-delete-button {
    opacity: .6;
}

#wordDeleteConfirm {
    top: 35% !important;
}

.word-card-heading {
    font-family: 'Merriweather', serif;
    font-size: 18px;
    margin-bottom: 7px;
    letter-spacing: 2px;
    color: #FFC968;
}

.definitions-list,
.uses-list {
    margin-left: 15px;
    padding-left: 14px !important;
}

.definitions-list li,
.uses-list li {
    list-style-type: disclosure-closed !important;
}

.word-card-normal-text {
    font-family: 'Hina Mincho';
    font-size: 19px !important;
    margin-left: 15px !important;
}

.word-user-info {
    margin-top: 19px;
    margin-bottom: 8px;
    color: #FFC968;
}

.word-user-info p span a {
    text-decoration: underline;
    color: #9ED7FF;
}

.word-user-info p {
    font-size: 14px;
    font-family: 'Merriweather', serif;
    ;
}

.word-tags {
    margin-bottom: 0;
}

.edit-delete-buttons {
    display: inline;
}

.edit-word-button {
    margin-left: 15px;
}

@media(max-width: 576px) {
    .card .card-action {
        padding: 16px 12px !important;
    }
}

.given-word {
    text-decoration: underline;
}




/* form pages */

.add-alt-button {
    color: black !important;
    font-family: 'Merriweather';
    padding-top: 5px;
    opacity: .9;
    background-color: #47A94C;
    margin: 15px 0 5px 10px;
    margin-top: 15px;
    margin-bottom: 5px;
    box-shadow: 1px 1px 0px 2px black;
    font-size: 1em;
    line-height: 18px;
    text-transform: none;
    border: solid #2a652d 1px;
    font-weight: 500;
}



.add-alt-button:hover {
    background-color: black;
    color: #47A94C!important;
}

.new-word-input {
    margin: 21px 0 0;
}

.new-word-cancel-submit {
    line-height: 10px;
}

.new-word-cancel-submit button:hover,
.non-user-form-confirm button:hover,
.user-buttons a:hover,
.edit-delete-buttons a:hover {
    border: black solid 1px;
}

.form-instruction {
    padding-left: 30px;
    color: #43a047;
    font-style: italic;
    font-weight: 700;
}

#date_of_birth {
    opacity: .5;
}

.first-tag-select {
    margin-left: 4px !important;
}

.form-modal-button {
    margin-bottom: 75px;
}

@media(max-width: 350px) {
    .add-alt-button {
        padding: 2px;
        font-size: .9em;
    }
}

#moreTagsInstruction {
    padding-left: 18px;
}

#moreTagsButton {
    padding-left: 6px;
}

.new-word-cancel-submit button {
    margin-bottom: 8px;
}

.modal-content h5 {
    color: black;
}




/* user profile */
.basic-user-info-container {
    margin-left: 7%;
}

@media(max-width: 600px) {
    .basic-user-info-container {
        margin-left: 10%;
    }

    .user-buttons {
        padding-right: 46px !important;
    }

    .image-info {
        margin-bottom: 16px;
    }

    .user-buttons a {
        max-width: 250px;
    }
}

.user-image-icon {
    width: 25%;
}

.user-buttons a {
    min-width: 214px;
    margin: 3px;
}

.basic-user-info {
    display: inline;
    position: absolute;
    font-size: 18px;
    font-weight: 600;
}

#userProfileHeading {
    margin-bottom: 50px;
}

#aboutUserHeading {
    margin-bottom: 30px;
}

.tabs .tab a:hover,
.tabs .tab a.active {
    color: #7e57c2;
    opacity: 1;
}

.tabs .indicator {
    background-color: #7e57c2;
}

.tabs .tab a {
    color: #7e57c2;
    opacity: .7;
}

.opaque-text {
    opacity: .7;
}

.edit-user-image-icon {
    width: 100%;
}

.thick-text {
    opacity: 1;
    font-weight: 900;
    color: #2a652d;
}

.user-description {
    margin-top: 20px;
    margin-bottom: 20px;
}

@media(min-width: 993px) and (max-width: 1200px) {
    .no-words-text {
        margin-left: 20% !important;
    }
}



/* rating area */
.already-rated-up,
#not-rated-up:hover {
    color: #00FF66;
}

.already-rated-down,
#not-rated-down:hover {
    color: red;
}

#unrate-link-up,
#unrate-link-down,
#not-rated-up,
#not-rated-down {
    text-decoration: none;
    color: white;
}


/* word list pages */

.sort-icons {
    margin-right: 18px !important;
}

.word-summary {
    min-height: 132px;
}

@media(min-width: 601px) {
    .word-summary p {
        max-height: 44px;
        overflow-y: hidden;
    }
}

@media(max-width: 409px) {
    .sort-button {
        float: none!important;
        margin-top: 10px;
    }
}



/* add tag */

.add-tag-form-container {
    margin-top: 60px;
}

/* Some of the following css was taken from this website: https://codepen.io/lukezhang/pen/JlImc
   However, it has been edited to meet the needs and styling of the Yurt Index website.  */
/* Pure CSS Post Tags */
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.post {
    position: relative;
    padding: 10px 20px;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    border-radius: 5px;
    width: auto;
    text-align: center;
}

.tags-container {
    float: none !important;
}

.tags {
    margin: 0;
    padding: 0;
    right: 24px;
    bottom: -14px;
    list-style: none;
}

.tags li {
    margin-right: 17px;
    margin-top: 5px;
}

.tags li,
.tags a {
    float: left;
    height: 26px;
    line-height: 24px;
    position: relative;
    font-size: 14px;
    background-color: white;
}

.tags a {
    margin-left: 20px;
    padding: 0 10px 0 12px;
    background: #FFC968;
    color: black;
    text-decoration: none;
    -moz-border-radius-bottomright: 4px;
    -webkit-border-bottom-right-radius: 4px;
    border-bottom-right-radius: 4px;
    -moz-border-radius-topright: 4px;
    -webkit-border-top-right-radius: 4px;
    border-top-right-radius: 4px;
}

.tags a:before {
    content: "";
    float: left;
    position: absolute;
    top: 0;
    left: -12px;
    width: 0;
    height: 0;
    border-color: transparent #FFC968 transparent transparent;
    border-style: solid;
    border-width: 12px 12px 14px 0;
}

.tags a:after {
    content: "";
    position: absolute;
    top: 10px;
    left: 0;
    float: left;
    width: 4px;
    height: 4px;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    border-radius: 2px;
    background: #fff;
    -moz-box-shadow: -1px -1px 2px #004977;
    -webkit-box-shadow: -1px -1px 2px #004977;
    box-shadow: -1px -1px 2px #004977;
}

.tags a:hover {
    background: #555;
}

.tags a:hover:before {
    border-color: transparent #555 transparent transparent;
}

/* END OF UNORIGINAL CSS */



/* star words */

.star-word-icon {
    margin-right: 15px;
    margin-top: 15px;
    color: gold;
    font-size: 3rem;
}



/* error pages */

.error-text-emote {
    margin-top: 75px;
}


/* return home button */
.return-home-button {
    background-color: #ffc968;
    color: black;
    padding: 10px;
    border: 1px solid black;
    font-size: 19px;
}

.return-home-button:hover {
    color: #FFC968;
    background-color: black;
}

.home-button-container {
    margin-top: 75px;
    margin-bottom: 50px;
}

@media(min-width: 993px) and (max-width: 1305px) {
    .home-button-container {
        margin-bottom: 74px;
    }
}

@media(min-width: 1306px) and (max-width: 1649px) {
    .home-button-container {
        margin-bottom: 90px;
    }
}

@media(min-width: 1650px) {
    .home-button-container {
        margin-bottom: 160px;
    }
}

